--- a/Dockerfile.Consumer
+++ b/Dockerfile.Consumer
@@ -2,8 +2,8 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS base
 
 FROM base AS build
 WORKDIR /app
-COPY ./Consumer .
-RUN dotnet publish -c Release -o out
+COPY . .
+RUN dotnet publish Consumer -c Release -o out
 
 FROM base AS final
 WORKDIR /app
