--- a/compose.yml
+++ b/compose.yml
@@ -5,6 +5,18 @@ services:
       - "6379:6379"
     volumes:
       - redis-data:/data
+  minio:
+    image: minio/minio
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - minio-data:/data
+    environment:
+      MINIO_ROOT_USER: your-access-key
+      MINIO_ROOT_PASSWORD: your-secret-key
+    command: server --console-address ":9001" /data
 
 volumes:
   redis-data:
+  minio-data:
