--- a/Consumer/Consumer.csproj
+++ b/Consumer/Consumer.csproj
@@ -10,6 +10,8 @@
   <ItemGroup>
 
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
+
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
     <PackageReference Include="StackExchange.Redis" Version="2.8.16" />
   </ItemGroup>
 
