--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       #
     strategy:
       matrix:
-        service: [Producer, Consumer]
+        service: [Producer, Consumer, Template]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
