--- a/compose.yml
+++ b/compose.yml
@@ -16,7 +16,15 @@ services:
       MINIO_ROOT_USER: your-access-key
       MINIO_ROOT_PASSWORD: your-secret-key
     command: server --console-address ":9001" /data
+  clamav:
+    image: clamav/clamav
+    platform: linux/amd64
+    ports:
+      - "3310:3310"
+    volumes:
+      - clamav-data:/var/lib/clamav
 
 volumes:
   redis-data:
   minio-data:
+  clamav-data:
