--- a/Producer/Producer.csproj
+++ b/Producer/Producer.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="nClam" Version="9.0.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.8.16" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="AElf.OpenTelemetry" Version="8.2.1" />
   </ItemGroup>
 
   <ItemGroup>
