--- a/compose.yml
+++ b/compose.yml
@@ -13,12 +13,11 @@ services:
     volumes:
       - minio-data:/data
     environment:
-      MINIO_ROOT_USER: your-access-key
-      MINIO_ROOT_PASSWORD: your-secret-key
-    command: server --console-address ":9001" /data
+      MINIO_ROOT_USER: minio
+      MINIO_ROOT_PASSWORD: minio123
+    command: server /data --console-address ":9001"
   clamav:
-    image: clamav/clamav
-    platform: linux/amd64
+    image: clamav/clamav:latest
     ports:
       - "3310:3310"
     volumes:
@@ -26,13 +25,13 @@ services:
 
   # OpenTelemetry Collector
   otel-collector:
-    image: otel/opentelemetry-collector-contrib:latest
+    image: otel/opentelemetry-collector:latest
     command: ["--config=/etc/otel-collector-config.yaml"]
     volumes:
       - ./otel-collector-config.yaml:/etc/otel-collector-config.yaml
     ports:
       - "4315:4315"   # OTLP HTTP receiver
-      - "4317:4317"   # OTLP gRPC receiver
+      - "4316:4317"   # OTLP gRPC receiver (changed from 4317 to avoid conflict)
       - "8889:8889"   # Prometheus exporter
     depends_on:
       - jaeger
@@ -40,11 +39,12 @@ services:
   # Jaeger
   jaeger:
     image: jaegertracing/all-in-one:latest
+    environment:
+      - COLLECTOR_OTLP_ENABLED=true
     ports:
       - "16686:16686"  # Web UI
-      - "14250:14250"  # Model used by collector
-      - "4317"         # OTLP gRPC
-      - "4318"         # OTLP HTTP
+      - "4317:4317"    # OTLP gRPC
+      - "4318:4318"    # OTLP HTTP
 
   # Prometheus for metrics
   prometheus:
