--- a/compose.yml
+++ b/compose.yml
@@ -13,9 +13,9 @@ services:
     volumes:
       - minio-data:/data
     environment:
-      MINIO_ROOT_USER: minio
-      MINIO_ROOT_PASSWORD: minio123
-    command: server /data --console-address ":9001"
+      MINIO_ROOT_USER: your-access-key
+      MINIO_ROOT_PASSWORD: your-secret-key
+    command: server --console-address ":9001" /data  
   clamav:
     image: clamav/clamav:latest
     ports:
