--- a/compose.yml
+++ b/compose.yml
@@ -15,9 +15,10 @@ services:
     environment:
       MINIO_ROOT_USER: your-access-key
       MINIO_ROOT_PASSWORD: your-secret-key
-    command: server --console-address ":9001" /data  
+    command: server --console-address ":9001" /data
   clamav:
-    image: clamav/clamav:latest
+    image: clamav/clamav
+    platform: linux/amd64
     ports:
       - "3310:3310"
     volumes:
