collector endpoint update

--- a/Template/appsettings.json
+++ b/Template/appsettings.json
@@ -9,6 +9,6 @@
   "OpenTelemetry": {
     "ServiceName": "AutoscalerTemplate",
     "ServiceVersion": "1.0.0",
-    "CollectorEndpoint": "http://localhost:4316"
+    "CollectorEndpoint": "http://otel-collector-testnet-collector.observability:4315"
   }
 } 
