--- a/Producer/appsettings.json
+++ b/Producer/appsettings.json
@@ -9,6 +9,6 @@
   "OpenTelemetry": {
     "ServiceName": "AutoscalerProducer",
     "ServiceVersion": "1.0.0",
-    "CollectorEndpoint": "http://localhost:4316"
+    "CollectorEndpoint": "http://otel-collector-testnet-collector.observability:4315"
   }
 }
